--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
                     <a id="connect-button" href="/" class="button">Connect</a>
                     <script>
                         document.getElementById('connect-button').addEventListener('click', event => {
-                            ethereum.request({method: 'eth_requestAccounts'}).then(accounts => {});
+                            let account;
+                            let button = event.target;
+                            ethereum.request({method: 'eth_requestAccounts'}).then(accounts => {
+                                account = accounts[0];
+                                console.log(account);
+                                button.textContext = account;
+
+                                ethereum.request({method: 'eth_getBalance' , params: [account, 'latest']}).then(result => {
+                                    console.log(result);
+                                    let wei = parseInt(result,16);
+                                    let balance = wei / (10**18);
+                                    console.log(balance + " ETH");
+                                });
+                            });
                         });
                     </script>
                 </li>
